# vm-x-ai-file-processing

./: .editorconfig  .env  .gitignore  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  index.py  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.cursor/: mcp.json
.github/actions/setup-github-app/: action.yml
.github/actions/setup-monorepo/: action.yml
.github/workflows/: checks.yml  deploy-dev.yml  deploy-template.yml  pull-request.yml
docs/: run-aws-serverless-neon.md  run-aws.md  run-locally.md  run-minikube.md
scripts/: app-postgresql.yaml  bootstrap.sh  bootstrap_minikube.sh  db_tunnel.sh  deploy_helm_app.sh  example_usage.sh  localstack-values.yaml  minikube_serve.sh  run-apps.sh  run-docker.sh  temporal-values.yaml  test_inline_bold.sh
scripts/shared/: README.md  logging.sh  run-docker.sh
secrets/: README.md  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.ts
secrets/secrets/: dev.yaml  prd.yaml  shared.yaml
secrets/secrets/_encrypted/: dev.yaml  prd.yaml
secrets/src/: main.ts
secrets/src/stacks/: secrets-kms-stack.ts
tools/workspace-plugins/: README.md  eslint.config.mjs  executors.json  package.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.mts
tools/workspace-plugins/src/executors/: README.md
tools/workspace-plugins/src/executors/nest-build/: README.md  executor.ts  schema.d.ts  schema.json
tools/workspace-plugins/src/executors/proxy-executor/: executor.ts  schema.d.ts  schema.json
tools/workspace-plugins/src/executors/update-yaml/: executor.ts  schema.d.ts  schema.json
