[project]
name = "nx-workspace"
version = "1.0.0"
dependencies = [
  "workflow-worker",
  "dm-py-utils",
  "api",
  "dm-py-db-models",
  "dm-py-db-repositories",
  "dm-py-services",
  "dm-py-db-services",
  "dm-py-temporal-utils",
  "dm-py-logger",
  "dm-py-schemas",
  "workflow-ingestion",
  "evaluation-workflow",
  "workflow-shared-activities"
]

[tool.uv.workspace]
members = [
  "packages/apps/api",
  "packages/libs/py/utils",
  "packages/libs/py/db/models",
  "packages/workflows/worker",
  "packages/libs/py/db/repositories",
  "packages/libs/py/services",
  "packages/libs/py/db/services",
  "packages/libs/py/temporal/utils",
  "packages/libs/py/logger",
  "packages/libs/py/schemas",
  "packages/workflows/ingestion",
  "packages/workflows/evaluation",
  "packages/workflows/shared-activities"
]

[tool.uv.sources.workflow-worker]
workspace = true

[tool.uv.sources.dm-py-utils]
workspace = true

[tool.uv.sources.api]
workspace = true

[tool.uv.sources.dm-py-db-models]
workspace = true

[tool.uv.sources.dm-py-db-repositories]
workspace = true

[tool.uv.sources.dm-py-services]
workspace = true

[tool.uv.sources.dm-py-db-services]
workspace = true

[tool.uv.sources.dm-py-temporal-utils]
workspace = true

[tool.uv.sources.dm-py-logger]
workspace = true

[tool.uv.sources.dm-py-schemas]
workspace = true

[tool.uv.sources.workflow-ingestion]
workspace = true

[tool.uv.sources.evaluation-workflow]
workspace = true

[tool.uv.sources.workflow-shared-activities]
workspace = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
  "watchdog>=6.0.0"
]
